--- a/bin/install
+++ b/bin/install
@@ -8,7 +8,7 @@ set -euo pipefail
 
 install() {
   local install_type version install_path bin_install_path binary_path \
-    download_url tmp_download_dir download_path
+    download_url tmp_download_dir download_path files
 
   install_type=$1
   [ "$install_type" != "version" ] && echo "intall type, $install_type, is not supported" && exit 1
@@ -30,9 +30,8 @@ install() {
   rm -f "$bin_install_path/*" 2>/dev/null || true
 
   echo "Copying binaries"
-  tar -zxf "${download_path}" --directory "$tmp_download_dir"
-  local files
-  files=$(find "${tmp_download_dir}/$(get_file_name)" -type f | grep -v install)
+  extract_tar "${download_path}" "$tmp_download_dir"
+  files=$(find "${tmp_download_dir}/Bluemix_CLI" -type f | grep -v install)
   for f in $files; do
     cp -p "$f" "${bin_install_path}"
   done
@@ -43,9 +42,35 @@ install() {
   ln -sf "${bin_install_path}/ibmcloud" "${bin_install_path}/ic"
 }
 
+extract_tar() {
+  local download_path tmp_download_dir
+  download_path="$1"
+  tmp_download_dir="$2"
+
+  tar -zxf "${download_path}" --directory "$tmp_download_dir" -s '/IBM_Cloud_CLI/Bluemix_CLI/'
+
+  # If this is a pkg try to extract it
+  extract_pkg "$tmp_download_dir/Bluemix_Command_Line_Interface.pkg"
+  extract_pkg "$tmp_download_dir/Command_Line_Interface.pkg"
+}
+
+extract_pkg() {
+  local pkg
+  pkg="$1"
+  [ ! -f "$pkg/Payload" ] && return 0
+  tar -zxf \
+    "$pkg/Payload" \
+    --directory "$tmp_download_dir" \
+    -s ',usr\/local\/Bluemix,Bluemix_CLI,'
+
+  rm -rf "$1" 2>/dev/null || true
+}
+
 get_file_name() {
+  local version
+  version="$1"
   if [ "Linux" = "$(uname)" ]; then
-    echo "Bluemix_CLI/bin"
+    echo "Bluemix_CLI"
   else
     echo "IBM_Cloud_CLI"
   fi
