--- a/bin/install
+++ b/bin/install
@@ -37,7 +37,10 @@ install() {
   done
 
   echo "Creating symlinks"
-  [ -f "${bin_install_path}/bluemix" ] && ln -sf "${bin_install_path}/bluemix" "${bin_install_path}/ibmcloud"
+  [ -f "${bin_install_path}/bluemix" ] && \
+    ln -sf "${bin_install_path}/bluemix" "${bin_install_path}/ibmcloud"
+  [ ! -f "${bin_install_path}/bluemix" ] && \
+    ln -sf "${bin_install_path}/ibmcloud" "${bin_install_path}/bluemix"
   ln -sf "${bin_install_path}/ibmcloud" "${bin_install_path}/bx"
   ln -sf "${bin_install_path}/ibmcloud" "${bin_install_path}/ic"
 }
@@ -47,7 +50,9 @@ extract_tar() {
   download_path="$1"
   tmp_download_dir="$2"
 
-  tar -zxf "${download_path}" --directory "$tmp_download_dir" -s '/IBM_Cloud_CLI/Bluemix_CLI/'
+  tar -zxf "${download_path}" \
+    --directory "$tmp_download_dir" \
+    $(tar_sub '/IBM_Cloud_CLI/Bluemix_CLI/')
 
   # If this is a pkg try to extract it
   extract_pkg "$tmp_download_dir/Bluemix_Command_Line_Interface.pkg"
@@ -61,18 +66,16 @@ extract_pkg() {
   tar -zxf \
     "$pkg/Payload" \
     --directory "$tmp_download_dir" \
-    -s ',usr\/local\/Bluemix,Bluemix_CLI,'
+    $(tar_sub ',usr\/local\/Bluemix,Bluemix_CLI,')
 
-  rm -rf "$1" 2>/dev/null || true
+  rm -rf "$pkg" 2>/dev/null || true
 }
 
-get_file_name() {
-  local version
-  version="$1"
-  if [ "Linux" = "$(uname)" ]; then
-    echo "Bluemix_CLI"
+tar_sub() {
+  if is_linux; then
+    echo "--transform s${1}"
   else
-    echo "IBM_Cloud_CLI"
+    echo "-s ${1}"
   fi
 }
 
@@ -84,10 +87,14 @@ get_tmp_dir() {
   fi
 }
 
+is_linux() {
+  [ "Linux" = "$(uname)" ]
+}
+
 get_download_url() {
   local version platform arch
   version="$1"
-  [ "Linux" = "$(uname)" ] && platform="linux" || platform="osx"
+  is_linux && platform="linux" || platform="osx"
   if [ "$platform" = "osx" ]; then
     arch=""
   elif [ "x86_64" = "$(uname -m)" ]; then
